Se agrego la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
 
 <body>
 
+    <header>
+        <!-- Barra de navegacion -->
+        <nav>
+            <img src="img/Logo Lark Homes.jpg" alt="">
+            <a href="">Home</a>
+            <a href="">Listening</a>
+            <a href="">Services</a>
+            <a href="">Blog</a>
+            <a href="">About</a>
+            <a href="">Contact us</a>
+            <a href="">Pages</a>
+            <button>Get a Quote</button>
+        </nav>
+    </header>
+
 </body>
 
 </html>
