Se agrego toda la estructura de la pagina menos un icono

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 <body>
 
     <header>
-        <!-- Barra de navegacion -->
-        <nav>
-            <img src="img/Logo Lark Homes.jpg" alt="">
+
+        <img class="logo" src="img/Logo Lark Homes.jpg" alt="">
+
+        <!-- Nav-Bar -->
+        <nav class="nav-bar">
+
             <a href="">Home</a>
             <a href="">Listening</a>
             <a href="">Services</a>
@@ -25,10 +28,37 @@
             <a href="">About</a>
             <a href="">Contact us</a>
             <a href="">Pages</a>
-            <button>Get a Quote</button>
+
         </nav>
+        <button class="button">Get a Quote</button>
     </header>
 
+    <!-- Hero Text -->
+    <div class="text-hero">
+        <h1>Bring Your Family's Happiness to Your Dream House</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua.</p>
+    </div>
+
+    <!-- Search Bar -->
+    <form class="search-bar">
+        <input type="text" placeholder="Search Here">
+        <button type="submit">Search</button>
+    </form>
+
+    <div class="text">
+        <h2>280+</h2>
+        <p>Awards Winning</p>
+        <h2>78+</h2>
+        <p>Property Ready</p>
+        <h2>298+</h2>
+        <p>Happy Costumers</p>
+    </div>
+
+
+    <div class="casa-hero">
+        <img src="img/CasaHero.jpg" alt="">
+    </div>
 </body>
 
 </html>
