Se corrigio una palabra mal escrita (listing)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="nav-bar">
 
             <a href="">Home</a>
-            <a href="">Listening</a>
+            <a href="">Listing</a>
             <a href="">Services</a>
             <a href="">Blog</a>
             <a href="">About</a>
