--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <form class="search-bar">
         <input type="text" placeholder="Search Here">
         <button type="submit">Search</button>
-        <img src="img/lupa.svg" alt="">
+        <img class="lupa" src="img/search.svg" alt="">
     </form>
 
     <div class="text">
