Se agregaron divs en la parte de la descripcion

--- a/index.html
+++ b/index.html
@@ -47,15 +47,20 @@
         <img class="lupa" src="img/search.svg" alt="">
     </form>
 
-    <div class="text">
-        <h2>280+</h2>
-        <p>Awards Winning</p>
-        <h2>78+</h2>
-        <p>Property Ready</p>
-        <h2>298+</h2>
-        <p>Happy Costumers</p>
+    <div class="text-descripcion">
+        <div class="text1">
+            <h2>280+</h2>
+            <p>Awards Winning</p>
+        </div>
+        <div class="text2">
+            <h2>78+</h2>
+            <p>Property Ready</p>
+        </div>
+        <div class="text3">
+            <h2>298+</h2>
+            <p>Happy Customers</p>
+        </div>
     </div>
-
 
     <div class="casa-hero">
         <img src="img/CasaHero.jpg" alt="">
