Se agrego la imagen de la flecha

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         <!-- Nav-Bar -->
         <nav class="nav-bar">
 
-            <a href="">Home</a>
+            <a class="home" href="">Home</a>
             <a href="">Listing</a>
+            <img src="img/arrow.svg" alt="">
             <a href="">Services</a>
             <a href="">Blog</a>
             <a href="">About</a>
