--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             <img src="img/arrow.svg" alt="">
             <a href="">Services</a>
             <a href="">Blog</a>
+            <img src="img/arrow.svg" alt="">
             <a href="">About</a>
             <a href="">Contact us</a>
             <a href="">Pages</a>
-
+            <img src="img/arrow.svg" alt="">
         </nav>
         <button class="button">Get a Quote</button>
     </header>
