Se agrego la estructura del el listing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-
+    <!-- hero -->
+    <section></section>
     <header>
 
         <img class="logo" src="img/Logo Lark Homes.jpg" alt="">
@@ -67,6 +68,53 @@
     <div class="casa-hero">
         <img src="img/CasaHero.jpg" alt="">
     </div>
+    <!-- Termina el hero -->
+
+    <!-- Listing -->
+    <section>
+
+        <div>
+            <h1>Featured Listing</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore
+                magna aliqua.</p>
+        </div>
+
+        <div class="galeria">
+            <img src="img/Casa1.jpg" alt="">
+            <p>$2,800,-</p>
+            <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/marker.png" alt="marker" />
+            <h2>Ataz Standard House</h2>
+            <p>Pluto Street, Indonesia</p>
+            <img src="img/Casa2.jpg" alt="">
+            <p>$4,800,-</p>
+            <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/marker.png" alt="marker" />
+            <h2>Qiri Minimalist House</h2>
+            <p>Jupiter Street, Indonesia</p>
+            <img src="img/Casa3.jpg" alt="">
+            <p>$6,800,-</p>
+            <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/marker.png" alt="marker" />
+            <h2>Qanan Luxury House</h2>
+            <p>Mars Street, Indonesia</p>
+            <img src="img/Casa4.jpg" alt="">
+            <p>$8,800,-</p>
+            <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/marker.png" alt="marker" />
+            <h2>Tingah Elegant House</h2>
+            <p>Venus Street, Indonesia</p>
+        </div>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua.</p>
+
+        <p>See More</p>
+    </section>
+
+
+
+
+
+
+
 </body>
 
 </html>
